branches/wip/Archive/fe87ded9b7c6aa35550f893526c6f83e-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘double inputValues()’:
main.cpp:27:33: error: too many arguments to function ‘double quadratic()’
         derp = quadratic(a, b, c);
                                 ^
main.cpp:4:8: note: declared here
 double quadratic();
        ^
